feat(loading_page): add splash screen with logo and app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">DofusBestiaire</string>
+    <string name="app_name">Dofus Bestiaire</string>
+    <string name="todo">MyApp</string>
 </resources>
