wip bottom navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DofusBestiaire</string>
+    <string name="bottom_navigation_menu_home">Accueil</string>
 </resources>
